plugins/kotlin/idea/tests/testData/checker/regression/FunDeclarationAfterDot.kt
class A

fun f() {
    A.<error>fun <error>g</error>() {
        <error descr="[UNRESOLVED_REFERENCE]">g</error>()
    }</error>
}
